# SegGraph

./: CMakeLists.txt  README.md
DataExample/: fea2.txt  fea414.txt  fea836.txt  scan2.txt  scan223.txt  scan700.txt  scan836.txt
PythonCode/: getPointCloud.py  getPose.py
include/: SegGraph.h
src/: loopDetection.cpp  main.cpp  segment.cpp
